# obs-custom-delay

./: CMakeLists.txt  README.md  custom-delay.c  dynamic-delay.c  installer.iss.in  resource.rc.in
data/locale/: en-US.ini
